# CircuitPet-Firmware

./: CMakeLists.txt  CircuitPet-Firmware.ino
data/: Inst3.hpp  Inst3.raw  Test.raw  death.g565  frame.raw  hatch.g565.hs  intro.hs
data/Bg/: Level1.hs  Level1.raw  Level2.hs  Level2.raw  Level3.hs  Level3.raw  Level4.hs  Level4.raw  Level5.hs  Level5.raw  Level6.hs  Level6.raw  settings.raw
data/GameScreens/: Inst1.raw  Inst2.raw  Inst3.raw  Inst4.raw  Inst5.raw  Inst6.raw  Splash1.raw  Splash2.raw  Splash3.raw  Splash4.raw  Splash5.raw  Splash6.raw
data/GameScreensComp/: Inst2.raw  Inst5.raw  Splash3.raw  Splash6.raw
data/Games/2/: bg.raw  down1.raw  down2.raw  down3.raw  down4.raw  down5.raw  up1.raw  up2.raw  up3.raw  up4.raw
data/Games/5/: BarB.raw  BarP.raw  BarR.raw  BarY.raw  bg.raw  circ_b1.raw  circ_b2.raw  circ_p1.raw  circ_p2.raw  circ_y1.raw  circ_y2.raw  note1.raw  note2.raw  note3.raw  starEmpty.raw  starFull.raw
data/Games/Game1/: Arrow.raw  Background.raw  Bar.raw  BarEdge.raw  EmptyCan.raw  FullCan.raw  OilCan.cpp  OilCan.h  OilyDone.g565.hs
data/Games/Game3/: Background.raw  BarFrame.raw  Bomb.raw  Dynamite.raw  Nut.raw  Screw.raw
data/Games/Game4/: Background.raw  Goal.raw  ObstacleOver1.raw  ObstacleOver2.raw  ObstacleOver3.raw  ObstacleOver4.raw  ObstacleUnder1.raw  ObstacleUnder2.raw  ObstacleUnder3.raw  TileBot1.raw  TileDown2.raw  TileTop1.raw  TileTop2.raw
data/Home/: 01_general.g565  01_look.g565  01_scratch.g565  04_general.g565  04_look.g565  04_scratch.g565  06_general.g565  06_look.g565  06_scratch.g565
data/Home/rusty/: 01_general.g565  01_look.g565  01_scratch.g565  04_general.g565  04_look.g565  04_scratch.g565  06_general.g565  06_look.g565  06_scratch.g565
data/LevelUp/: 2.raw  3.raw  4.raw  5.raw  6.raw
data/MenuIcons/: Border.raw  Icon1.raw  Icon2.raw  Icon3.raw  Icon4.raw  Icon5.raw  Icon6.raw  Locked2.raw  Locked3.raw  Locked4.raw  Locked5.raw  Locked6.raw  nesto.raw  prilika.raw  settings.raw  slika.raw
data/OS/: Level1.raw  Level2.raw  Level3.raw  Level4.raw  Level5.raw  Level6.raw  Logo.raw
data/StatTypes/: 1.raw
data/Stats/: Bar.raw  Battery.raw  Exp.raw  Happiness.raw  LongBar.raw  OilLevel.raw
data/Systems/: 0.raw
src/: AutoShutdown.cpp  AutoShutdown.h  BgSprite.cpp  BgSprite.h  DeathState.cpp  DeathState.h  HatchingState.cpp  HatchingState.h  Intro.cpp  Intro.h  OSSprite.cpp  OSSprite.h  PixelDim.h  RGBController.cpp  RGBController.h  RGBIndicator.cpp  RGBIndicator.h  ScoreScreen.cpp  ScoreScreen.h  SplashState.cpp  SplashState.h  StatSprite.cpp  StatSprite.h  State.cpp  State.h  UserHWTest.cpp  UserHWTest.h
src/Clock/: ClockListener.cpp  ClockListener.h  ClockMaster.cpp  ClockMaster.h
src/Collision/: CircleCC.cpp  CircleCC.h  CollisionComponent.cpp  CollisionComponent.h  CollisionSystem.cpp  CollisionSystem.h  SquareCC.cpp  SquareCC.h
src/GameEngine/: Game.cpp  Game.h  GameObject.cpp  GameObject.h  GameSystem.h  ResourceManager.cpp  ResourceManager.h
src/GameEngine/Collision/: CircleCC.cpp  CircleCC.h  CollisionComponent.cpp  CollisionComponent.h  CollisionSystem.cpp  CollisionSystem.h  PolygonCC.cpp  PolygonCC.h  RectCC.h  SquareCC.cpp  SquareCC.h
src/GameEngine/Rendering/: AnimRC.cpp  AnimRC.h  RenderComponent.cpp  RenderComponent.h  RenderSystem.cpp  RenderSystem.h  SpriteRC.cpp  SpriteRC.h  StaticRC.cpp  StaticRC.h
src/Games/: Game.cpp  Game.h  Game5.cpp  Game5.h  GameObject.cpp  GameObject.h  GameSystem.cpp  GameSystem.h  RenderComponent.h  ResourceManager.cpp  ResourceManager.h  TestGame.cpp  TestGame.h  vec2.hpp
src/Games/2/: Game2.cpp  Game2.h
src/Games/Common/: Hearts.h  Score.h
src/Games/Game1/: Bar.cpp  Bar.h  Game1.cpp  Game1.h  Indicator.cpp  Indicator.h  OilCan.cpp  OilCan.h
src/Games/Game3/: Duck.cpp  Duck.h  Game3.cpp  Game3.h
src/Games/Game4/: Duck.cpp  Duck.h  Game4.cpp  Game4.h  TileManager.cpp  TileManager.h
src/Games/Game6/: Game6.cpp  Game6.h  Player.cpp  Player.h
src/Games/Rendering/: AnimRC.cpp  RenderComponent.cpp  RenderSystem.cpp  StaticRC.cpp  StaticRC.h
src/Home/: CharacterSprite.cpp  CharacterSprite.h  DuckScreen.cpp  DuckScreen.h  State.cpp  State.h
src/Home/Menu/: GameImage.cpp  GameImage.h  Menu.cpp  Menu.h  MenuHider.cpp  MenuHider.h
src/Home/Sprites/: BgSprite.cpp  CharacterSprite.cpp  CharacterSprite.h  OSSprite.cpp  OSSprite.h  StatSprite.cpp  StatSprite.h  StatsSprite.cpp  StatsSprite.h
src/JigHWTest/: JigHWTest.cpp  JigHWTest.h  SPIFFSChecksum.hpp
src/Menu/: Menu.cpp  Menu.h
src/Settings/: BooleanElement.cpp  BooleanElement.h  DiscreteSlider.cpp  DiscreteSlider.h  SettingsElement.cpp  SettingsElement.h  SettingsScreen.cpp  SettingsScreen.h  SliderElement.cpp  SliderElement.h  TextElement.cpp  TextElement.h
src/Stats/: Stats.hpp  StatsChangedListener.h  StatsManager.cpp  StatsManager.h
